--- a/FIWXDX_1015/FIWXDX_table.css
+++ b/FIWXDX_1015/FIWXDX_table.css
@@ -1,23 +1,65 @@
-.table {
-    
+body {
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    overflow: scroll;
 }
 
-.red {
-
+table {
+    border-collapse: collapse;
+    width: 500px;
+    text-align: center;
+    font-family: Arial, sans-serif;
 }
 
-.baige {
-
+caption {
+    text-align: center;
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
-.magenta {
-    
+th, td {
+    border: 1px solid #333;
+    padding: 10px;
+    width: 100px;
+    height: 75px;
 }
 
-.scroll {
-
+thead th {
+    background-color: gainsboro;
+    color: black;
 }
 
-.center {
+tbody tr:nth-child(1) td {
+    background-color: red;
+    color: black;
+}
 
+tbody tr:nth-child(1) td:nth-child(2) {
+    background-color: red;
+    color: black;
+    vertical-align: top;
+}
+
+tbody tr:nth-child(1) td:nth-child(3) {
+    background-color: red;
+    color: black;
+    vertical-align: bottom;
+}
+
+tbody tr:nth-child(2) td {
+    background-color: rgb(245, 236, 66);
+    color: black;
+}
+
+tbody tr:nth-child(3) td {
+    background-color: rgb(245, 236, 66);
+    color: black;
+}
+
+tbody tr:nth-child(3) td:nth-child(2) {
+    background-color: yellow;
+    color: black;
 }
